# SDL-test

./: CMakeLists.txt  asan_ignore.txt  main.c  readme.md
ShaderCompInterface/: CMakeLists.txt
ShaderCompInterface/cmake/: SDL3.cmake  VulkanComponents.cmake
ShaderCompInterface/src/: ShaderCompInterface.c
cmake/: SDL3.cmake  VulkanComponents.cmake  cglm.cmake  find_SDL3.cmake  find_VulkanComponents.cmake  find_cglm.cmake  use_SDL3.cmake  use_VulkanComponents.cmake  use_cglm.cmake
engine/: CMakeLists.txt
engine/cmake/: cglm.cmake
engine/include/: GPUBuffers.h  GraphicsPipeline.h  Material.h  MeshObject.h  RenderObject.h  RenderQueue.h  SDLDevice.h  Shader.h  ShaderUniformLayout.h  Strings.h  UniformBuffer.h  Window.h  engine.h
engine/src/: GPUBuffers.c  GraphicsPipeline.c  Material.c  MeshObject.c  RenderObject.c  RenderQueue.c  SDLDevice.c  Shader.c  ShaderUniformLayout.c  Strings.c  UniformBuffer.c  Window.c  main.c
examples/: CMakeLists.txt  FetchSysAudio.c  example1.c  example2.c
include/: GPUBuffers.h  GraphicsPipeline.h  MeshObject.h  SDLDevice.h  Shader.h  Strings.h  Window.h
shaders/: fragment.glsl  fragment.spv  rectangle.frag  rectangle.vert  vertex.glsl  vertex.spv
src/: GPUBuffers.c  GraphicsPipeline.c  MeshObject.c  Shader.c  Strings.c  main.c
